server sidebar UI done

--- a/styles/server-sidebar.css
+++ b/styles/server-sidebar.css
@@ -13,5 +13,94 @@
 
 @layer components {
   .server {
+    position: relative;
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    --border-radius: 1.5rem;
+    border-radius: var(--border-radius);
+    width: 3rem;
+    height: 3rem;
+    background: var(--bg-color);
+    color: var(--foreground-color);
+    text-transform: uppercase;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: -0.75rem;
+      background: var(--foreground-color-light);
+      width: 0.25rem;
+      height: 1.5rem;
+      border-top-right-radius: 0.25rem;
+      border-bottom-right-radius: 0.25rem;
+      scale: 0;
+      transition-property: height, scale;
+      transition-duration: 0.15s;
+      transform-origin: left center;
+
+      @media (prefers-reduced-motion: reduce) {
+        transition: none;
+      }
+    }
+
+    &.active,
+    &:hover,
+    &:focus-within {
+      background: var(--accent-color);
+      color: var(--accent-color-foreground);
+      --border-radius: 1rem;
+
+      &::before {
+        scale: 1;
+      }
+    }
+
+    &.active::before {
+      height: 2.5rem;
+    }
+
+    &.with-new-messages:not(.active) {
+      &::before {
+        height: 0.5rem;
+        scale: 1;
+      }
+      &:hover::before {
+        height: 1.5rem;
+      }
+    }
+    &[data-notification-count]::after {
+      content: attr(data-notification-count);
+      position: absolute;
+      right: -0.125rem;
+      bottom: -0.125rem;
+      background: var(--danger-color);
+      color: var(--danger-foreground-color);
+      font-size: 0.75rem;
+      font-weight: bold;
+      padding-inline: 0.27rem;
+      border: 0.25rem solid var(--bg-color-darker);
+      border-radius: 1rem;
+    }
+  }
+
+  .server,
+  .server img {
+    transition-property: border-radius;
+    transition-duration: 0.15s;
+    border-radius: var(--border-radius);
+
+    @media (prefers-reduced-motion: reduce) {
+      transition: none;
+    }
+  }
+
+  .server img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: var(--border-radius);
   }
 }
